[package]
name = "git-tellme"
version = "0.1.5"
edition = "2021"
authors = ["Marcel Arie <marcelarie95@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A custom tool to check and subscribe to github notifications from the CLI"
readme = "README.md"
homepage = "https://github.com/marcelarie/git-tellme"
repository = "https://github.com/marcelarie/git-tellme"
keywords = ["cli", "git", "notifications", "users"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
colored = "2"
structopt = "0.3"
anyhow = "1.0.44"
notify-rust = "4"
redis = "0.21.3"

[dev-dependencies]
color-backtrace = "0.5"
